--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
           </article>
         </section>
       </div>
-      <div class="project-bottom pheads-pbottom ">
+      <!-- <div class="project-bottom pheads-pbottom ">
         <h5><p>( ↓↓↓ )</p></h5>
-      </div>
+      </div> -->
     </section>
     <!-- <section id="Projects" class="Projects">
       <div class="Projects-container">
@@ -371,7 +371,7 @@
     <section id="Projects "  class="Projects AndroidProjects">
       <!-- <h1>Projects</h1> -->
       <div class="project-headings pheads-pbottom ">
-        <h3>Android Projects:</h3>
+        <h3>Android Projects( ↓↓↓ )</h3>
       </div>
       <div class="Projects-container">
         
