added projects links

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="sticky.css" />
   <link rel="stylesheet" href="card.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka" />
-  <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
-  <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
 
 
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
@@ -24,11 +25,11 @@
 
 <body>
   <div class="container">
-    <!-- <div class="splash">
+    <div class="splash">
       <h1 class=" fade-in">Welcome to my portfolio.</h1>
 
       </span>
-    </div> -->
+    </div>
 
     <section id="Intro" class="Intro">
       <div class="header">
@@ -148,8 +149,58 @@
         <section class="card-list">
           <article class="cardd">
             <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
+              <p>HTML,CSS,JS</p>
+              <h2>Portfolio</h2>
+            </header>
+
+            <div class="card-author">
+              <a class="author-avatar" href="#">
+                <img src="avatar.png" />
+              </a>
+              <svg class="half-circle" viewBox="0 0 106 57">
+                <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+              </svg>
+
+              <div class="author-name">
+                <div class="author-name-prefix">By,</div>
+                AB
+              </div>
+            </div>
+            <div class="tags">
+              <a href="https://github.com/AbhishekBonageri-75/Portfolio" target="_blank">Git</a>
+              <a href="https://abhishekb.netlify.app/" target="_blank">Live</a>
+              <a href="#">Demo</a>
+            </div>
+          </article>
+          <article class="cardd">
+            <header class="card-header">
+              <p>ReactJS,SpringBoot<br>MySql,Docker</p>
+              <h2>TopNewZ</h2>
+            </header>
+
+            <div class="card-author">
+              <a class="author-avatar" href="#">
+                <img src="avatar.png" />
+              </a>
+              <svg class="half-circle" viewBox="0 0 106 57">
+                <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+              </svg>
+
+              <div class="author-name">
+                <div class="author-name-prefix">By,</div>
+                AB
+              </div>
+            </div>
+            <div class="tags">
+              <a href="https://github.com/AbhishekBonageri-75/topnewz" target="_blank">Git</a>
+              <a href="#">Live</a>
+              <a href="#">Demo</a>
+            </div>
+          </article>
+          <article class="cardd">
+            <header class="card-header">
+              <p>ReactJS,SpringBoot<br>MongoDB,MySql</p>
+              <h2>The Blogger</h2>
             </header>
 
             <div class="card-author">
@@ -173,58 +224,8 @@
           </article>
           <article class="cardd">
             <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
-            </header>
-
-            <div class="card-author">
-              <a class="author-avatar" href="#">
-                <img src="avatar.png" />
-              </a>
-              <svg class="half-circle" viewBox="0 0 106 57">
-                <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
-              </svg>
-
-              <div class="author-name">
-                <div class="author-name-prefix">By,</div>
-                AB
-              </div>
-            </div>
-            <div class="tags">
-              <a href="#">Git</a>
-              <a href="#">Live</a>
-              <a href="#">Demo</a>
-            </div>
-          </article>
-          <article class="cardd">
-            <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
-            </header>
-
-            <div class="card-author">
-              <a class="author-avatar" href="#">
-                <img src="avatar.png" />
-              </a>
-              <svg class="half-circle" viewBox="0 0 106 57">
-                <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
-              </svg>
-
-              <div class="author-name">
-                <div class="author-name-prefix">By,</div>
-                AB
-              </div>
-            </div>
-            <div class="tags">
-              <a href="#">Git</a>
-              <a href="#">Live</a>
-              <a href="#">Demo</a>
-            </div>
-          </article>
-          <article class="cardd">
-            <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
+              <p>ReactJS,SpringBoot<br>MySql,Docker</p>
+              <h2>Issues Tracker</h2>
             </header>
 
             <div class="card-author">
@@ -378,8 +379,8 @@
         <section class="card-list">
           <article class="cardd">
             <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
+              <p>Java,Android Studio</p>
+              <h2>Notes<br>App</h2>
             </header>
 
             <div class="card-author">
@@ -396,15 +397,15 @@
               </div>
             </div>
             <div class="tags">
-              <a href="#">Git</a>
-              <a href="#">Live</a>
+              <a href="https://github.com/AbhishekBonageri-75/NotesApplication" target="_blank">Git</a>
               <a href="#">Demo</a>
             </div>
           </article>
           <article class="cardd">
             <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
+              <p>Java,Android Studio</p>
+              
+              <h2>Weather<br>App</h2>
             </header>
 
             <div class="card-author">
@@ -421,15 +422,15 @@
               </div>
             </div>
             <div class="tags">
-              <a href="#">Git</a>
-              <a href="#">Live</a>
+              <a href="https://github.com/AbhishekBonageri-75/WeatherApp" target="_blank">Git</a>
               <a href="#">Demo</a>
             </div>
           </article>
           <article class="cardd">
             <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
+              <p>Java,Android Studio</p>
+
+              <h2>Multifactor<br>Auth-App</h2>
             </header>
 
             <div class="card-author">
@@ -447,14 +448,13 @@
             </div>
             <div class="tags">
               <a href="#">Git</a>
-              <a href="#">Live</a>
               <a href="#">Demo</a>
             </div>
           </article>
           <article class="cardd">
             <header class="card-header">
-              <p>Tech-Stack</p>
-              <h2>Project Title</h2>
+              <p>Java,Android Studio</p>
+              <h2>Civil<br>Advocacy</h2>
             </header>
 
             <div class="card-author">
@@ -471,8 +471,7 @@
               </div>
             </div>
             <div class="tags">
-              <a href="#">Git</a>
-              <a href="#">Live</a>
+              <a href="https://github.com/AbhishekBonageri-75/CivilAdvocacyApp" target="_blank">Git</a>
               <a href="#">Demo</a>
             </div>
           </article>
