--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="sticky.css" />
   <link rel="stylesheet" href="card.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka" />
-  <!-- <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
   <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
@@ -84,11 +83,12 @@
             <h2 style="font-size:2.5rem;color: white;">About Me</h2>
           </div>
           <div class="about-para">
-            <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
-            <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
-            <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
+            <p>Hello, my name is Abhishek, and I have fun developing apps that make our lives easier. Developing programs and the methods by which they are implemented is fascinating, and my desire to learn more about programming paradigms , design patterns and their architecture led me to pursue a master's degree in computer science.</p>
+            <p>I always strive to write clean, reusable, and manageable code, and I'm currently studying basics of Machine Learning and Cloud Computing, which I intend to integrate into my full stack applications that i build which will improve the usability,performance and efficiency of the applications.</p>
+            <p>⚡️ Playing and Watching(Barcelona) football  matches are very exciting. Shoot me a message , lets hangout watching football matches if you would like . 😅</p>
           </div>
           <div class="extras">
+            <h5>My Hobbies</h5>
             <ul>
               <li>▹ Horse Riding</li>
               <li>▹ Playing Soccer</li>
@@ -101,7 +101,6 @@
 
 
     <section id="Skills" class="Skills">
-      <!-- <h1>Skills</h1> -->
       <div class="skills-container">
         <div class="heading">
           <h2 style="font-size:2.5rem;color: white;">My Expertise</h>
