--- a/index.html
+++ b/index.html
@@ -86,25 +86,9 @@
             <p>Hello, my name is Abhishek, and I have fun developing apps that make our lives easier. Developing programs and the methods by which they are implemented is fascinating, and my desire to learn more about programming paradigms , design patterns and their architecture led me to pursue a master's degree in computer science.</p>
             <p><br>I always strive to write clean, reusable, and manageable code, and I'm currently studying basics of Machine Learning and Cloud Computing, which I intend to integrate into my full stack applications that i build which will improve the usability,performance and efficiency of the applications.</p>
             <p>⚡️ Playing and Watching(Barcelona) football  matches are very exciting. Shoot me a message , lets hangout watching football matches if you would like . 😅
-              <br><h5>My Hobbies</h5><br>▹ Horse Riding<br>▹ Playing Soccer<br>▹ Cooking
+              <h5>My Hobbies</h5><br>▹ Horse Riding<br>▹ Playing Soccer<br>▹ Cooking
             </p>
-            <!-- <p>
-              <h5>My Hobbies</h5>
-              <ul>
-              <li>▹ Horse Riding</li>
-              <li>▹ Playing Soccer</li>
-              <li>▹ Cooking</li>
-              <li>▹ Bike Riding</li></p> -->
           </div>
-          <!-- <div class="extras">
-            <h5>My Hobbies</h5>
-            <ul>
-              <li>▹ Horse Riding</li>
-              <li>▹ Playing Soccer</li>
-              <li>▹ Cooking</li>
-              <li>▹ Bike Riding</li>
-            </ul>
-          </div> -->
         </div>
     </section>
 
